--- a/classes/_fs_.filesystem.html
+++ b/classes/_fs_.filesystem.html
@@ -54,7 +54,7 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/_fs_.html">&quot;fs&quot;</a>
+					<a href="../modules/fs.html">&quot;fs&quot;</a>
 				</li>
 				<li>
 					<a href="_fs_.filesystem.html">FileSystem</a>
@@ -299,7 +299,7 @@
 						<a href="../modules/_api_.html">"api"</a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="../modules/_fs_.html">"fs"</a>
+						<a href="../modules/fs.html">"fs"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_thread_wrapper_.html">"thread_<wbr>wrapper"</a>
