--- a/classes/_api_.api.html
+++ b/classes/_api_.api.html
@@ -1543,7 +1543,7 @@
 						<a href="../modules/_api_.html">"api"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/_fs_.html">"fs"</a>
+						<a href="../modules/fs.html">"fs"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_thread_wrapper_.html">"thread_<wbr>wrapper"</a>
