--- a/globals.html
+++ b/globals.html
@@ -69,7 +69,7 @@
 							<h3>External modules</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-external-module"><a href="modules/_api_.html" class="tsd-kind-icon">"api"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_fs_.html" class="tsd-kind-icon">"fs"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/fs.html" class="tsd-kind-icon">"fs"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_thread_wrapper_.html" class="tsd-kind-icon">"thread_<wbr>wrapper"</a></li>
 							</ul>
 						</section>
@@ -87,7 +87,7 @@
 						<a href="modules/_api_.html">"api"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_fs_.html">"fs"</a>
+						<a href="modules/fs.html">"fs"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_thread_wrapper_.html">"thread_<wbr>wrapper"</a>
