--- a/classes/_thread_wrapper_.threadwrapper.html
+++ b/classes/_thread_wrapper_.threadwrapper.html
@@ -294,7 +294,7 @@
 						<a href="../modules/_api_.html">"api"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="../modules/fs.html">"fs"</a>
+						<a href="../modules/_fs_.html">"fs"</a>
 					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="../modules/_thread_wrapper_.html">"thread_<wbr>wrapper"</a>
