--- a/modules/_fs_.html
+++ b/modules/_fs_.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Dwarf</title>
+	<title>&quot;fs&quot; | Dwarf</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
 <header>
 	<div class="tsd-page-toolbar">
 		<div class="container">
 			<div class="table-wrap">
-				<div class="table-cell" id="tsd-search" data-index="assets/js/search.js" data-base=".">
+				<div class="table-cell" id="tsd-search" data-index="../assets/js/search.js" data-base="..">
 					<div class="field">
 						<label for="tsd-search-field" class="tsd-widget search no-caption">Search</label>
 						<input id="tsd-search-field" type="text" />
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">Dwarf</a>
+					<a href="../index.html" class="title">Dwarf</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -51,10 +51,13 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="globals.html">Globals</a>
+					<a href="../globals.html">Globals</a>
+				</li>
+				<li>
+					<a href="_fs_.html">&quot;fs&quot;</a>
 				</li>
 			</ul>
-			<h1> Dwarf</h1>
+			<h1>External module &quot;fs&quot;</h1>
 		</div>
 	</div>
 </header>
@@ -66,11 +69,9 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>External modules</h3>
+							<h3>Classes</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-external-module"><a href="modules/_api_.html" class="tsd-kind-icon">"api"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_fs_.html" class="tsd-kind-icon">"fs"</a></li>
-								<li class="tsd-kind-external-module"><a href="modules/_thread_wrapper_.html" class="tsd-kind-icon">"thread_<wbr>wrapper"</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/_fs_.filesystem.html" class="tsd-kind-icon">File<wbr>System</a></li>
 							</ul>
 						</section>
 					</div>
@@ -80,22 +81,25 @@
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
-					<li class="globals current ">
-						<a href="globals.html"><em>Globals</em></a>
+					<li class="globals  ">
+						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_api_.html">"api"</a>
+						<a href="_api_.html">"api"</a>
+					</li>
+					<li class="current tsd-kind-external-module">
+						<a href="_fs_.html">"fs"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="modules/_fs_.html">"fs"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="modules/_thread_wrapper_.html">"thread_<wbr>wrapper"</a>
+						<a href="_thread_wrapper_.html">"thread_<wbr>wrapper"</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-class tsd-parent-kind-external-module">
+						<a href="../classes/_fs_.filesystem.html" class="tsd-kind-icon">File<wbr>System</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
@@ -162,7 +166,7 @@
 	</div>
 </footer>
 <div class="overlay"></div>
-<script src="assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="assets/js/search.js"><' + '/script>');</script>
+<script src="../assets/js/main.js"></script>
+<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
