--- a/modules/_thread_wrapper_.html
+++ b/modules/_thread_wrapper_.html
@@ -88,7 +88,7 @@
 						<a href="_api_.html">"api"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="fs.html">"fs"</a>
+						<a href="_fs_.html">"fs"</a>
 					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="_thread_wrapper_.html">"thread_<wbr>wrapper"</a>
