--- a/classes/_fs_.filesystem.html
+++ b/classes/_fs_.filesystem.html
@@ -107,9 +107,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L38">fs.ts:38</a></li>
+									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L41">fs.ts:41</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Allocate the given size in the heap</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -130,9 +135,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L44">fs.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L50">fs.ts:50</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Allocate and write the given string in the heap</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -153,9 +163,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L48">fs.ts:48</a></li>
+									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L57">fs.ts:57</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Call native fopen with filePath and perm</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -196,9 +211,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L58">fs.ts:58</a></li>
+									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L70">fs.ts:70</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Call native popen with filePath and perm</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -222,9 +242,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L68">fs.ts:68</a></li>
+									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L83">fs.ts:83</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Read a file as string</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -245,9 +270,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L83">fs.ts:83</a></li>
+									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L101">fs.ts:101</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Read string from descriptor</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -268,9 +298,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L100">fs.ts:100</a></li>
+									<li>Defined in <a href="https://github.com/iGio90/DwarfCore/blob/ecc1941/src/fs.ts#L121">fs.ts:121</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Write string to file</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -300,9 +335,6 @@
 					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="../modules/_fs_.html">"fs"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="../modules/_thread_wrapper_.html">"thread_<wbr>wrapper"</a>
 					</li>
 				</ul>
 			</nav>
